# ModelMirrors

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  MODULE.bazel  ModelMirrors.cabal  ModelMirros.cabal  README.md  WORKSPACE.bazel  cabal.project  hie.yaml  rules_haskell_runfiles_fix.patch  stackage_snapshot.yaml
.github/workflows/: witness-traces.yml
apalache-mc/: repo.bzl
app/: BUILD.bazel  Main.hs
docs/: mbt-remaining-work.md  mirror-protocol-state-machine.dot  protocol-spec.md  server-mode-auth-design.md  server-mode-discovery-design.md  server-mode-mtls-design.md  server-mode-mtls-plan.md  server-mode-registry-design.md
docs/apalache/: design.md  interactive.md
docs/superpowers/plans/: 2026-05-29-engine-handle.md  2026-05-29-trace-engine.md  2026-06-03-bazel-module.md  2026-06-05-structured-logging.md  2026-06-09-interactive-symbolic-testing.md  2026-06-09-minimal-trace-check.md  2026-06-10-server-behavior.md
docs/superpowers/specs/: 2026-05-28-protocol-design.md  2026-05-29-engine-handle-design.md  2026-05-29-trace-engine-design.md  2026-05-29-transport-design.md  2026-06-03-bazel-module-design.md  2026-06-05-structured-logging-design.md  2026-06-10-server-behavior-design.md
scripts/: gen-certs.sh  gen-witness-traces.sh
specs/: AapalacheRPCProtocol.tla  ApalacheRPCClient.tla  Counter.tla  MinimalTraceCheck.cfg  MinimalTraceCheck.tla  MirrorProtocol.tla  MirrorProtocolFaults.tla  MirrorProtocolServer.tla  MirrorProtocolWitness.tla
specs/traces/: all_steps_done.itf.json  explore_cmd.itf.json  explore_session.itf.json  fault_close.itf.json  register_error.itf.json  step_mismatch.itf.json
src/: Apalache.hs  BUILD.bazel  Engine.hs  MinimalTraceCheck.hs  Protocol.hs
src/Apalache/: Command.hs  Core.hs  Explorer.hs  SpecSource.hs  Trace.hs  Types.hs
src/Apalache/Rpc/: Client.hs  ServerBehavior.hs  Types.hs
src/Engine/: Core.hs  Handle.hs  Interactive.hs  Replay.hs  Types.hs
src/Protocol/: Client.hs  Core.hs  Json.hs  Mirror.hs  Registry.hs
src/Protocol/Format/: Json.hs
src/Protocol/Transport/: Core.hs  Mock.hs  Stdio.hs  Tcp.hs  Tls.hs
stubs/: BUILD.bazel  TlsTransportSpec.hs
stubs/Protocol/Transport/: Tls.hs
test/: BUILD.bazel  ClientSpec.hs  EngineSpec.hs  ExploreMirrorSpec.hs  Main.hs  MainSpec.hs  MinimalTraceCheckSpec.hs  MirrorE2ESpec.hs  MirrorProtocolSpec.hs  MirrorStepSpec.hs  RegistrySpec.hs  TcpTransportSpec.hs  TlsTransportSpec.hs
test/Apalache/: CommandSpec.hs  ServerBehaviorSpec.hs  SpecSourceSpec.hs  TraceSpec.hs  TypesSpec.hs
test/specs/: Counter.tla  DeterministicCounter.tla  ExtDep.tla  ExtMain.tla  HourClock.tla  MirrorProtocol.tla
