load("@rules_haskell//haskell:defs.bzl", "haskell_toolchain_library")

exports_files([
    "stackage_snapshot.yaml",
    "specs/MirrorProtocol.tla",
    "specs/AapalacheRPCProtocol.tla",
    "specs/ApalacheRPCClient.tla",
])

filegroup(
    name = "witness-traces",
    srcs = glob(["specs/traces/*.itf.json"]),
    visibility = ["//visibility:public"],
)

haskell_toolchain_library(
    name = "base",
    visibility = ["//visibility:public"],
)

haskell_toolchain_library(
    name = "unix",
    visibility = ["//visibility:public"],
)
