module(
    name = "modelmirrors",
    version = "0.1.0.0",
)

bazel_dep(name = "rules_haskell", version = "1.0")

# rules_haskell v1.0 and rules_sh v0.5.0 are not Bazel 8 compatible.
# Use master branches which have the get_cpu_value fix.
git_override(
    module_name = "rules_haskell",
    remote = "https://github.com/NzSN/rules_haskell",
    commit = "932d7545df965cc9f62a181a948df73fa08fdaf8",
)

git_override(
    module_name = "rules_sh",
    remote = "https://github.com/tweag/rules_sh",
    commit = "c28667efc2fd9c95ceada90ce2b27d928fa36971",
)
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_python", version = "0.37.2")

rules_haskell_dependencies = use_extension(
    "@rules_haskell//extensions:rules_haskell_dependencies.bzl",
    "rules_haskell_dependencies",
)
use_repo(
    rules_haskell_dependencies,
    "Cabal",
    "os_info",
    "rules_haskell_stack",
    "rules_haskell_stack_update",
    "rules_haskell_worker_dependencies",
)

ghc_version = use_extension(
    "@rules_haskell//extensions:ghc_version.bzl",
    "ghc_default_version",
)
use_repo(ghc_version, "rules_haskell_ghc_version")

haskell_toolchains = use_extension(
    "@rules_haskell//extensions:haskell_toolchains.bzl",
    "haskell_toolchains",
)
haskell_toolchains.bindists(version = "9.10.1")
use_repo(haskell_toolchains, "all_bindist_toolchains")

register_toolchains("@all_bindist_toolchains//:all")

stack_snapshot = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)

stack_snapshot.package(name = "aeson")
stack_snapshot.package(name = "bytestring")
stack_snapshot.package(name = "containers")
stack_snapshot.package(name = "directory")
stack_snapshot.package(name = "filepath")
stack_snapshot.package(name = "process")
stack_snapshot.package(name = "text")

stack_snapshot.package(name = "tasty")
stack_snapshot.package(name = "tasty-hunit")

use_repo(stack_snapshot, "stackage", "stackage-exe")

# Dev-only extension instance for snapshot (only when modelmirrors is root module).
# The non-dev extension above relies on the consuming root module to provide the snapshot.
stack_snapshot_dev = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
    dev_dependency = True,
)
stack_snapshot_dev.snapshot(local_snapshot = "@modelmirrors//:stackage_snapshot.yaml")

apalache_mc_repo = use_repo_rule(
    "//apalache-mc:repo.bzl",
    "apalache_mc_repository",
)
apalache_mc_repo(name = "apalache_mc")
