load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "ModelMirrors",
    srcs = ["Main.hs"],
    ghcopts = ["-Wall", "-XGHC2024"],
    deps = [
        "//src:ModelMirrors",
        "//stubs:stubs",
        "//:base",
        "//:unix",
        "@stackage//:containers",
        "@stackage//:text",
    ],
    visibility = ["//visibility:public"]
)
