load("@rules_haskell//haskell:defs.bzl", "haskell_library")

haskell_library(
    name = "ModelMirrors",
    srcs = glob(["**/*.hs"]),
    ghcopts = ["-Wall", "-XGHC2024"],
    visibility = ["//visibility:public"],
    deps = [
        "@stackage//:aeson",
        "//:base",
        "@stackage//:base64-bytestring",
        "@stackage//:bytestring",
        "@stackage//:containers",
        "@stackage//:directory",
        "@stackage//:filepath",
        "@stackage//:http-client",
        "@stackage//:http-types",
        "@stackage//:network",
        "@stackage//:process",
        "@stackage//:temporary",
        "@stackage//:text",
    ],
)
