load("@rules_haskell//haskell:defs.bzl", "haskell_test")

haskell_test(
    name = "ModelMirros-test",
    srcs = glob(
        ["**/*.hs"],
        exclude = ["specs/**"],
    ),
    ghcopts = ["-Wall", "-XGHC2024"],
    data = glob(["specs/*.tla"]),
    deps = [
        "//src:ModelMirros",
        "//:base",
        "@apalache_mc//:apalache-mc",
        "@stackage//:bytestring",
        "@stackage//:containers",
        "@stackage//:directory",
        "@stackage//:process",
        "@stackage//:tasty",
        "@stackage//:tasty-hunit",
        "@stackage//:text",
    ],
)
