load("@rules_haskell//haskell:defs.bzl", "haskell_test")

haskell_test(
    name = "ModelMirrors-test",
    srcs = glob(
        ["**/*.hs"],
        exclude = ["specs/**"],
    ),
    ghcopts = ["-Wall", "-XGHC2024"],
    data = glob(["specs/*.tla"]) + [
        "//:specs/MirrorProtocol.tla",
        "//app:ModelMirrors",
    ],
    deps = [
        "//src:ModelMirrors",
        "//:base",
        "@apalache_mc//:apalache-mc",
        "@stackage//:aeson",
        "@stackage//:bytestring",
        "@stackage//:containers",
        "@stackage//:directory",
        "@stackage//:filepath",
        "@stackage//:process",
        "@stackage//:tasty",
        "@stackage//:tasty-hunit",
        "@stackage//:text",
    ],
)
